# mulle-core-developer

./: .gitignore  CMakeLists.txt  CMakePackage.cmake  Dockerfile  LICENSE  README.md  RELEASENOTES.md  overview.dot
.github/workflows/: mulle-sde-ci.yml
.mulle/etc/env/: environment-project.sh
.mulle/etc/project/: formula-info.sh
cola/: config.plist  description.md.bud  executables.md.bud  properties.plist
src/mulle-core/c/: inherit  sourcetree
src/mulle-core/c-developer/: inherit  usage
src/mulle-core/c/project-oneshot/all/PROJECT_SOURCE_DIR/generic/: include.h
src/mulle-core/c/project-oneshot/executable/PROJECT_SOURCE_DIR/generic/: include.h
